space overflow resolved

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -365,7 +365,7 @@
 
   .App-menu_bottom > *:last-child {
     justify-self: flex-end;
-    top: -85vh;
+    top: -83vh;
     position: relative;
     left: 97.5vw;
   }
